[ignore] test require unique objects
svn path=/trunk/eXist/; revision=13148